# roosterteeth-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  requests.rs  tests.rs
src/structs/: channels.rs  common.rs  episodes.rs  mod.rs  seasons.rs  series.rs  videos.rs
