[package]
name = "roosterteeth_rs"
version = "0.1.0"
authors = ["Duncan Bristow <duncan_bristow@candunc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.reqwest]
version = "0.10.0"
features = ["blocking", "json"]
