[package]
name = "roosterteeth_rs"
version = "0.3.1"
authors = ["Duncan Bristow <duncan_bristow@candunc.com>"]
description = "Rust Bindings for the RoosterTeeth SVOD API"
license = "Apache-2.0"
keywords = ["RoosterTeeth", "bindings"]
readme = "README.md"
repository = "https://github.com/candunc/roosterteeth-rs"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]
